--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.21.1",
-    "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2",
+    "@types/cors": "^2.8.19",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
-    "joi": "^17.13.1",
-    "express-rate-limit": "^7.4.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.18.0"
   },
   "devDependencies": {
-    "@types/node": "^24.3.0",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.21",
     "@types/express-rate-limit": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
