--- a/package.json
+++ b/package.json
@@ -1,43 +1,29 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "description": "A RESTful To-Do application with TypeScript, Express, and MongoDB",
-  "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
-  "keywords": [
-    "todo",
-    "api",
-    "typescript",
-    "express",
-    "mongodb"
-  ],
-  "author": "Your Name",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "@types/cors": "^2.8.19",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-rate-limit": "^7.5.1",
-    "joi": "^17.13.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.18.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.0.0",
+    "firebase-admin": "^11.11.1",
+    "joi": "^17.0.0",
+    "mongodb": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.21",
-    "@types/express-rate-limit": "^6.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.3.0",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/node": "^18.0.0",
+    "nodemon": "^2.0.0",
+    "ts-node": "^10.0.0",
     "typescript": "^5.9.2"
   }
 }
