--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.0.0",
     "firebase-admin": "^11.11.1",
+    "git-filter-repo": "^0.0.30",
     "joi": "^17.0.0",
     "mongodb": "^5.0.0"
   },
